// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoCell renders a number value 1`] = `
<cell-stub
  class="license-info-cell"
  isflexible="true"
  value="100"
>
  <template>
    <span
      class="mr-2 text"
    >
      title
    </span>
     
    <button
      class="btn-link information-target"
      type="button"
    >
      <icon-stub
        class="icon d-block"
        name="information"
        size="16"
      />
    </button>
     
    <gl-popover-stub
      content="popoverContent"
      cssclasses=""
      placement="bottom"
      triggers="hover"
    />
  </template>
</cell-stub>
`;

exports[`InfoCell renders a title and string value with an info popover through props 1`] = `
<cell-stub
  class="license-info-cell"
  isflexible="true"
  value="value"
>
  <template>
    <span
      class="mr-2 text"
    >
      title
    </span>
     
    <button
      class="btn-link information-target"
      type="button"
    >
      <icon-stub
        class="icon d-block"
        name="information"
        size="16"
      />
    </button>
     
    <gl-popover-stub
      content="popoverContent"
      cssclasses=""
      placement="bottom"
      triggers="hover"
    />
  </template>
</cell-stub>
`;
